# oxide

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  oxide.yaml
.github/workflows/: e2e.yml
crates/oxide-server/: Cargo.toml
crates/oxide-server/src/: auth.rs  coalesce.rs  config.rs  db.rs  local.rs  logger.rs  main.rs  metadata.rs  metrics.rs  publish.rs  s3backend.rs  settings.rs  state.rs  storage.rs  tarball.rs  tls.rs  transform.rs  upstream.rs
crates/oxide-server/src/routes/: audit.rs  health.rs  mod.rs  npm_auth.rs  npm_publish.rs  registry.rs
e2e/: .gitignore  package.json  tsconfig.json
e2e/fixtures/large/: package.json
e2e/fixtures/scoped/: package.json
e2e/fixtures/simple/: package.json
e2e/lib/: assertions.ts  cases.ts  oxide.ts
e2e/managers/: TODO.md  bun.ts  exec.ts  index.ts  npm.ts  types.ts
web/: .env.example  components.json  nuxt.config.ts  package.json  tailwind.config.ts
web/app/: app.vue
web/app/assets/css/: tailwind.css
web/app/components/: Stat.vue
web/app/layouts/: default.vue
web/app/middleware/: auth.global.ts
web/app/pages/: index.vue  login.vue  settings.vue  setup.vue  tokens.vue
web/app/pages/users/: index.vue
web/app/pages/workspaces/: [id].vue  index.vue
web/app/plugins/: http.ts  notivue.client.ts
web/server/api/: setup.post.ts
web/server/api/auth/: login.post.ts  logout.post.ts  me.get.ts
web/server/api/members/: [id].delete.ts  [id].patch.ts  index.post.ts
web/server/api/proxy/: invalidate.post.ts  stats.get.ts
web/server/api/settings/: [section].put.ts  index.get.ts
web/server/api/teams/: [id].delete.ts  index.post.ts
web/server/api/tokens/: [prefix].delete.ts  index.get.ts  index.post.ts
web/server/api/users/: [id].delete.ts  index.get.ts  index.post.ts
web/server/api/workspaces/: [id].delete.ts  [id].get.ts  index.get.ts  index.post.ts
web/server/db/: schema.sql
web/server/utils/: access.ts  auth.ts  db.ts  logger.ts  respond.ts  settings.ts
