[workspace]
resolver = "2"
members = ["crates/oxide-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Oxide Contributors"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros", "http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-br", "compression-gzip", "set-header"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "json", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bytes = "1"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
humantime-serde = "1"
parse-size = "1"
tokio-util = { version = "0.7", features = ["io"] }
flate2 = "1"
brotli = "7"
hex = "0.4"
sha2 = "0.10"
once_cell = "1"
prometheus = "0.13"
http = "1"
http-body-util = "0.1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-acme = { version = "0.11", default-features = false, features = ["ring", "tokio"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rusty-s3 = "0.7"
arc-swap = "1"
notify = "6"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
