[package]
name = "oxide-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "oxide"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
bytes.workspace = true
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true
moka.workspace = true
dashmap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
humantime-serde.workspace = true
parse-size.workspace = true
tokio-util.workspace = true
flate2.workspace = true
brotli.workspace = true
hex.workspace = true
sha2.workspace = true
once_cell.workspace = true
prometheus.workspace = true
http.workspace = true
http-body-util.workspace = true
uuid.workspace = true
rusqlite.workspace = true
rustls.workspace = true
rustls-acme.workspace = true
tokio-rustls.workspace = true
axum-server.workspace = true
rusty-s3.workspace = true
arc-swap.workspace = true
url.workspace = true
chrono.workspace = true
